# sphinxcontrib-svg-links

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
examples/diagramm_links_to_myst_labels/: conf.py  index.rst
examples/diagramm_links_to_myst_labels/dir_level1/: rectangle.md
examples/diagramm_links_to_myst_labels/dir_level1/dir_level2/: diagram.md  ellipse.md
examples/diagramm_links_to_rst_labels/: README.MD
examples/diagramm_links_to_sphinx_labels/: index.rst
examples/diagramm_links_to_sphinx_labels/dir_level1/dir_level2/: ellipse.rst
sphinxcontrib_svg_links/: directives.py  extension.py  svg.py  writer.py
tests/sphinx/: conf.py  index.rst
tests/sphinx/dir_level1/: rectangle.rst
tests/sphinx/dir_level1/dir_level2/: diagram.rst  first.rst
