[tool.poetry]
name = "sphinxcontrib-svg-links"
version = "0.1.0"
description = ""
authors = ["volker <volker.jaenisch@inqbus.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = ">=6,<8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
