[tool.poetry]
name = "sphinxcontrib-svg-links"
version = "0.1.0"
description = ""
authors = ["volker <volker.jaenisch@inqbus.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = ">=6,<8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sphinxcontrib-svg-links"
dynamic = ["version"]
description = "A Sphinx extension for linking to URIs and Sphinx labels from SVG graphics."
authors = [{name = "Dr. Volker Jaenisch", email = "volker.jaenisch@inqbus.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Documentation :: Sphinx",

]
keywords = ["sphinx", "extension", "SVG", "links", "URI"]
requires-python = ">=3.8"
dependencies = ["sphinx>6,<8"]

[project.urls]
Homepage = "https://github.com/sphinxcontrib-svg-links"
Documentation = "https://sphinxcontrib-svg-links.readthedocs.io"
